HelloUltraviolet/Fixtures/RejectedSource/Patterns/IfCaseModalNonExhaustive/Expected.uv
//! Expected diagnostic metadata for the IfCaseModalNonExhaustive rejected-source specimen.

expectedDiagnostic("E-TYP-2060", "rule.17.IfCase-Modal-NonExhaustive")
